--- a/src/app/etiqueta/etiqueta.page.html
+++ b/src/app/etiqueta/etiqueta.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <ion-button (click)="pickImage()">
     <ion-icon name="camera" slot="start"></ion-icon>
     <ion-label>Select Image</ion-label>
