--- a/src/app/etiqueta/etiqueta.page.html
+++ b/src/app/etiqueta/etiqueta.page.html
@@ -1,8 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Etiqueta</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Etiqueta</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content padding>
   <ion-button (click)="pickImage()">
