--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,24 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Autenticação</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-card>
-    <ion-item>
-      <ion-label position="floating">
-        Login
-      </ion-label>
-      <ion-input id="txtUser"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">
-        Senha
-      </ion-label>
-      <ion-input id="txtPassword"></ion-input>
-    </ion-item>
-    <ion-button id="btnLogar" color="primary" [routerLink]="'/etiqueta/'" routerDirection="forward" position="floating">
-      Logar</ion-button>
-  </ion-card>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-card>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input id="txtEmail" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+          <ion-label>
+            Should be a valid email address.
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating"> Senha </ion-label>
+          <ion-input type="password" ngModel name="password" required minlength="6" #passwordCtrl="ngModel"
+            id="txtPassword"></ion-input>
+        </ion-item>
+      </ion-item>
+      <ion-item *ngIf="!passwordCtrl.valid" lines="none">
+        <ion-label>
+          Should at least be 6 characters long.
+        </ion-label>
+      </ion-item>
+      <ion-button id="btnLogar" color="primary" [routerLink]="'/etiqueta/'" routerDirection="forward"
+        position="floating">Logar</ion-button>
+      <ion-button type="button" color="primary" fill="clear" expand="block" (click)="onSwitchAuthMode()">
+        Switch to {{ isLogin ? 'Signup' : 'Login' }}
+      </ion-button>
+      <ion-button type="submit" color="primary" expand="block" [disabled]="!f.valid">
+        {{ isLogin ? 'Login' : 'Signup' }}
+      </ion-button>
+    </ion-card>
+  </form>
 </ion-content>
