--- a/src/app/etiqueta/etiqueta.page.html
+++ b/src/app/etiqueta/etiqueta.page.html
@@ -1,8 +1,8 @@
 <ion-header>
     <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
+      <ion-button color="primary" [routerLink]="'/login/'" routerDirection="backward">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
       <ion-title>Etiqueta</ion-title>
     </ion-toolbar>
   </ion-header>
